We zijn vanaf het begin begonnen

--- a/Eindopdracht/app/src/main/res/values/strings.xml
+++ b/Eindopdracht/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Eindopdracht</string>
+    <string name="app_name">Mijn Devices</string>
     <string name="action_settings">Settings</string>
 </resources>
